Improvements
- Use more streams
- Add compilation test in jdk 11