@@ -1,7 +1,7 @@
 package net.dreamerzero.chatregulator.listener.command;
 
-import java.util.ArrayList;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.stream.Collectors;
 
 import com.velocitypowered.api.event.Subscribe;
 import com.velocitypowered.api.event.ResultedEvent.GenericResult;
@@ -159,18 +159,13 @@ public class CommandListener {
                 dUtils.debug(player, command, type);
                 violationEvent.addViolationGlobal(type);
                 cManager.sendWarningMessage(player, type);
-                //TODO: Change this in java 16 update
-                /*
-                cManager.sendAlertMessage(Audience.audience(server.getAllPlayers().stream().filter(
-                  op -> op.hasPermission("chatregulator.notifications")).toList()), player, type);
-                */
-                ArrayList<Audience> playersOp = new ArrayList<>();
-                for(Player playerOp : server.getAllPlayers()){
-                    if(playerOp.hasPermission("chatregulator.notifications")){
-                        playersOp.add(playerOp);
-                    }
-                }
-                cManager.sendAlertMessage(Audience.audience(playersOp), player, type);
+
+                cManager.sendAlertMessage(Audience.audience(
+                    server.getAllPlayers().stream()
+                        .filter(op -> op.hasPermission("chatregulator.notifications"))
+                        .collect(Collectors.toList())),
+                    player, type);
+
                 player.addViolation(type);
                 cUtils.executeCommand(type, player);
             }
